<resources>
    <string name="app_name">Do not wait in line</string>
    <string name="welcome">welcome to our cafe</string>
    <string name="name">enter name</string>
    <string name="onward">onward</string>
    <string name="drink_want">Hello what kind of drink do you want?</string>
    <string name="drink_add">What do you want to add?</string>
    <string name="Tea">Tea</string>
    <string name="Coffee">Coffee</string>
    <string name="drink_type">Choose type of drink</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="lemon">Lemon</string>
    <string-array name="coffee">
        <item>Latte</item>
        <item>Capuchino</item>
        <item>Expresso</item>
        <item>Americano</item>
    </string-array>
    <string-array name="tea">
        <item>Black</item>
        <item>Green</item>
        <item>White</item>
    </string-array>
    <string name="oder">Order</string>
    <string name="cake_want">What kind of cake do you want?</string>
    <string name="napoleon">Napoleon</string>
    <string name="panna">Panna Cotta</string>
    <string name="tiramisu">Tiramisu</string>
    <string name="chees">Cheesecake</string>
    <string name="confirm">Confirm</string>
</resources>