<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cake"
    android:background="@color/beige">

    <TextView
        android:id="@+id/textViewCake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cake_want"
        android:textSize="34sp"
        android:textColor="@color/lightBroun"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGrouCake"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonOder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCake">

        <CheckBox
            android:id="@+id/checkBoxNapoleon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/napoleon"
            android:textSize="20dp"/>

        <CheckBox
            android:id="@+id/checkBoxPanna"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/panna"/>

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:textColor="@color/white"
        android:id="@+id/buttonOder"
        android:background="@color/nuts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/oder"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="238dp"
        android:layout_height="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGrouCake"
        app:layout_constraintTop_toBottomOf="@+id/textViewCake"
        app:srcCompat="@drawable/napoleon1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="249dp"
        android:layout_height="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGrouCake"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/panna" />

</androidx.constraintlayout.widget.ConstraintLayout>